# VedaAide.py

./: .cspellrc.json  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .skaffoldignore  Makefile  README.cn.md  README.md  docker-compose.yml  pyproject.toml  skaffold.yaml
.github/: README.md  python-code-quality.instructions.md
.github/ISSUE_TEMPLATE/: task.md
.github/instructions/: coding-standards.instructions.md  documentation.instructions.md  github-cli.instructions.md  local-env.instructions.md  project-context.instructions.md  project-structure.instructions.md  testing.instructions.md  windows-dev-setup.instructions.md
.github/prompts/: .prompts.json  code-review-prompt.md  coding-standards.md  project-context.md  testing-strategy.md
.github/skills/: README.md
.github/skills/cloud-native/: SKILL.md
.github/skills/evaluation/: SKILL.md
.github/skills/github-cli-workflow/: SKILL.md
.github/skills/rag-engineering/: SKILL.md
.github/skills/testing/: SKILL.md
.github/tools/: .env.example  .gitignore  README.md  __init__.py  config.py  pr_evaluator.py  pr_executor.py  pr_monitor.py  start.bat  start.sh
.github/workflows/: ci.yml  code-quality.yml
.temp/: README.md
data/public_samples/: README.cn.md  README.md  sample_job_postings.json  sample_reading_comprehension.json  sample_resumes.json
dev-tools/: README.cn.md  README.md  code_standards_checker.py  requirements.txt  translate.py  translate_with_ollama.py
dev-tools/pr-monitor/: .env.example  .eslintrc.json  .gitignore  README.en.md  README.md  package.json
dev-tools/pr-monitor/src/: config.ts  evaluator.ts  executor.ts  github-client.ts  index.ts  monitor.ts  types.ts
docs/: INDEX.en.md  INDEX.md  PROJECT_STRUCTURE.cn.md  PROJECT_STRUCTURE.en.md
docs/JD/: JD-001.md
docs/guides/: CI_CD_SETUP.md  DEVELOPMENT.cn.md  DEVELOPMENT.en.md  INTEGRATION_TESTING.cn.md  INTEGRATION_TESTING.md
docs/planning/: 00.basics.en.md  00.basics.md  AgentScenarios.cn.md  AgentScenarios.en.md  TASK_BREAKDOWN.cn.md  TASK_BREAKDOWN.en.md  index.md  main.cn.md  main.en.md
infra/docker/: Dockerfile.dev  clickhouse-cluster.xml  clickhouse-users.xml  clickhouse-zookeeper.xml
infra/k8s/: deployment.yaml
scripts/data/: GENERATOR_GUIDE.md  QUICK_REFERENCE.md  advanced_generator.py  data_generator.py  demo_generation.py  import_deidentified_data.py  load_public_samples.py
scripts/data/generator/: __init__.py  __main__.py  exporter.py  job_posting.py  models.py  repository.py  resume.py
scripts/k8s/: deploy-local.sh
src/: __init__.py
src/core/: __init__.py
src/core/data/: __init__.py  data_loader.py  deidentifier.py  deidentifier_examples.py  document_loader.py  document_loader_interface.py  document_record.py  indexer.py
src/core/retrieval/: __init__.py  deidentifier.py  deidentifier_examples.py  document_indexer.py  indexer.py
tests/: __init__.py
tests/common/: __init__.py  _check_dependencies.py
tests/integration/: COLLECTION_ISOLATION.md  QUICK_REFERENCE.md  conftest.py  test_data_import.py
tests/integration/core/data/: test_document_loader.py  test_document_record.py
tests/integration/core/retrieval/: test_document_indexer.py  test_import_pipeline.py
tests/integration/test_data/: job_posting_sample.txt  job_postings.json  resume_sample.md  resumes.json
tests/unit/: __init__.py  test_deidentification.py  test_indexer.py
