[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vedaaide"
version = "0.1.0"
description = "VedaAide - Advanced RAG System for Resume-Job Matching"
authors = ["Your Team <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}, {include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.0"
pylint = ">=3.2,<4.0"
pyright = "^1.1.0"
flake8 = "^7.0.0"
types-requests = "^2.31.0"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pyc
  | dist
  | build
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
line_length = 100
skip = [".venv", "build", "dist"]
skip_glob = ["**/migrations/**"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "translatepy.*"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring (handled by our standards)
    "C0114",  # missing-module-docstring
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y", "z", "df", "ax"]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
