[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vedaaide"
version = "0.1.0"
description = "VedaAide - Advanced RAG System for Resume-Job Matching"
authors = ["Your Team <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}, {include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core RAG & Orchestration
langchain = "*"
langchain-core = "*"
langgraph = "*"
llama-index = "*"
llama-index-core = "*"

# Vector DB & Retrieval
qdrant-client = "*"
rank-bm25 = "*"

# Prompt Optimization & RAG
dspy-ai = "*"
ragas = "*"

# LLM Providers & Embedding
openai = "*"
azure-identity = "*"
ollama = "*"

# Document Processing
PyPDF2 = "*"

# Observability
langfuse = "*"

# Configuration & Utils
python-dotenv = "*"
pydantic = "*"
click = "*"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
pre-commit = "^3.1.0"
translatepy = "^2.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    ".temp",
    "htmlcov",
    "langfuse_storage",
    "qdrant_storage",
    "dist",
    "build",
    "data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
